Freedom Sanbox Ant Deploy/src/objects/Related_Questions_To_Analysis__c.object
<CustomObject>
    <description>This will store the related questions to the analysis.</description>
    <fields>
        <fullName>Analysis_Matrix__c</fullName>
        <label>Analysis Matrix</label>
        <referenceTo>Analysis_Matrix__c</referenceTo>
        <relationshipLabel>Related Questions To Analysis</relationshipLabel>
        <relationshipName>Related_Questions_To_Analysis</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Option</label>
        <referenceTo>Question_Option_List__c</referenceTo>
        <relationshipLabel>Related Questions To Analysis</relationshipLabel>
        <relationshipName>Related_Questions_To_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Master</label>
        <referenceTo>Question_Bank_List__c</referenceTo>
        <relationshipLabel>Related Questions To Analysis</relationshipLabel>
        <relationshipName>Related_Questions_To_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Related Questions To Analysis</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Related Questions To Analysis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Questions To Analysis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>